# spout

./: .bazelrc  .gitignore  .travis.yml  AGENTS.md  ASSESSMENT.md  Cargo.toml  PATCH_NOTES.md  README.md  RULE_CHANGES.md  WORKSPACE  build.rs  build_wasm.sh  format.sh  game_config.toml  index.html  inspect_apk.sh  package-lock.json  profile.puffin  profile.sh  release.md  run_formatters.sh  run_using_clang.sh  run_wasm.sh  rust-toolchain.toml  spout.js  spout_bg.wasm  tasks.md
.cargo/: config.toml
.circleci/: config.yml
.github/workflows/: canary.yml  ci.yml  gh-pages.yml  release-macos.yml  release.yml  update-goldens.yml
_context/: ASSESSMENT.md  README.md  auto-improve-log.md  ios-frame-pacing-findings.md  ios-target.md  macos-signing.md  spoutds-analysis.md  wasm-debugging.md
archaeology/: .bazelrc  .clang-format  WORKSPACE  bazel-archaeology  bazel-bin  bazel-out  bazel-spout  bazel-testlogs
archaeology/base/: BUILD  benchmark_example.cc  circular_buffer.h  circular_buffer_test.cc  construction_macros.h  error_xor_test.cc  file.cc  file.h  file_test.cc  format_test.cc  googletest.h  init.h  logging.h  logging_test.cc  optional_test.cc  scoped_profiler.h  scoped_profiler_test.cc  time.cc
archaeology/gpu_particles/: game_main.cc  gl_emitter.cc  gl_emitter.h  gl_particle.h
archaeology/graphics/: color_map_vis.cc  image_viewer.cc  image_viewer_main.cc  load_shader.h  opengl.h  particles_demo.h
archaeology/spout/: .gitignore
archaeology/src/: bresenham.h  bresenham_test.cc  buffer_stack_test.cc  controller_input.h  convert.h  convert_test.cc  drawing_utils.h  eigen_types.h  eigen_types_test.cc  emitter.h  fps_estimator.cc  get_cell_benchmark.cc  level_generators.h  scrolling_manager.cc  ship_scrolling_demo.cc  so2_test.cc
archaeology/tools/: build_image.sh  entrypoint.sh
archaeology/vulkan/: game_main.cc  glsl_to_spirv.bzl  hello_compute.cc  hello_quad.cc  hello_quad_main.cc  vulkan_memory_allocator.cc
assets/: pipeline.dot
assets/music/: convert_music.sh  z_bviinaaa.mod
base/: BUILD  circular_buffer.h  circular_buffer_test.cc  error_xor.h  error_xor_test.cc  file.cc  file.h  format.h  googletest.h  init.h  init_example.cc  logging.h  scoped_profiler.h  time.h  time_test.cc  wall_timer.h
canary/: index.html  spout.js  spout_bg.wasm
docs/: pipeline.md
examples/: framework.rs
examples/bunnymark/: main.rs
examples/hello/: main.rs
examples/hello-compute/: main.rs  shader.wgsl
examples/hello-triangle/: main.rs
examples/hello_android/: hello_android.rs
examples/hello_atomics/: main.rs
examples/hello_audio/: main.rs
examples/hello_compute/: main.rs
examples/minimal_atomic/: main.rs
examples/spout_android/: spout_android.rs
gpu_particles/: BUILD  game_controller.cc  game_controller.h  game_main.cc  game_parameters.h  game_window.cc  game_window.h  gl_emitter.cc  gl_emitter.h  gl_particle.h
gpu_particles/shaders/: emitter.cs  noise2d.cs
graphics/: BUILD  animated_canvas.cc  animated_canvas.h  check_opengl_errors.h  color_map_vis.cc  image_viewer_main.cc  load_shader.cc  load_shader.h  load_shader_test.cc  shader.vert
graphics/particles/: BUILD  bresenham.cs  color_map_texture.frag  compute_shader_test.cc  cpu_particle_test.cc  draw_particles.cs  emitter.cs  fp_bresenham.cs  particle_shader_test.cc  shader.frag  ship.cs
int_grid/: Cargo.toml
int_grid/src/: lib.rs
ios/: Info.plist  main.m
ios/Spout.xcodeproj/: project.pbxproj
macos/: AppIcon.icns  Info.plist
run-wasm/src/: main.rs
rust/: Cargo.toml  build.rs  tasks.md  tasks.txt
rust/.github/workflows/: ci.yml
rust/assets/music/: brainless_3.mod
rust/examples/: framework.rs
rust/examples/basic/: main.rs
rust/examples/color-uniform/: main.rs
rust/examples/compute/: main.rs
rust/examples/hello_atomics/: main.rs
rust/examples/hello_audio/: main.rs
rust/examples/hello_compute/: main.rs
rust/examples/hello_triangle/: main.rs
rust/examples/image_viewer/: main.rs
rust/examples/minimal_atomic/: main.rs
rust/examples/particle_system/: main.rs
rust/shaders/: atomics.comp  emitter.comp  particle.h
rust/shaders/image_viewer/: shader.comp  shader.frag
rust/shaders/particle_system/: clear_ssbo.comp  emitter.comp  glow.frag  grid.h  particle.h  particles.comp  particles.frag  particles.vert  quad.frag  quad.vert  shader.comp  shader.frag  shader.vert  ship.frag  ship.vert  terrain.frag
rust/shaders/triangle/: shader.frag  shader.vert
rust/src/: color_maps.rs  compositor.rs  debug_overlay.rs  emitter.rs  fonts.rs  fps_estimator.rs  game_params.rs  glow_pass.rs  int_grid.rs  level_buffer.rs  lib.rs  main.rs  music_player.rs  particle_system.rs  ship.rs  sound_queue.rs  terrain_renderer.rs  text_renderer.rs  viewport.rs
rust/src/emitter/: mod.rs
rust/src/shader_utils/: mod.rs
scripts/: build_ios.sh  check_wasm_exports.py  package_macos.sh  run_ios.sh
shaders/: atomics.comp  atomics_minimal.comp
shaders/particle_system/: emitter.comp  flip_quad.vert  grid.h  hash.h  noise.h  particles.comp  perspective.frag  quad.frag  quad.vert  (+2 more)
src/: BUILD  app.rs  audio.rs  background.rs  bloom.rs  bresenham.h  bresenham_benchmark.cc  bresenham_demo.cc  bresenham_profile.cc  bresenham_test.cc  buffer_stack.h  buffer_stack_test.cc  buffer_util.rs  camera.rs  check_opengl_errors.h  collision.rs  color_maps.rs  controller_input.h  convert.h  cpu_collision_detector.rs  debug_overlay.rs  demo_utils.h  draw.wgsl  eigen_glm.h  eigen_test.cc  eigen_types.h  eigen_types_test.cc  emitter.h  emitter.rs  emitter.wgsl  emitter_demo.cc  emitter_test.cc  exp_demo.cc  fonts.rs  fps_estimator.cc  fps_estimator.h  fps_estimator.rs  game_demo.cc  game_params.rs  game_viewport.rs  (+60 more)
tools/: Dockerfile  profile_target.sh
vulkan/: BUILD  game_controller.cc  game_controller.h  glfw.h  glfw_main.cc  glsl_to_spirv.bzl  hello_compute.cc  hello_compute.h  hello_compute_main.cc  hello_quad.cc  hello_quad.h  hello_quad_main.cc  vma_wrapper.cc  vma_wrapper.h  vulkan.h  vulkan_memory_allocator.h  vulkan_utils.cc  vulkan_utils.h
wasm-resources/: capture_console.js  index.template.html
(+174 files in other folders)
