[package]
name = "spout"
version = "0.1.0"
authors = ["Geoffrey Lalonde <lalondegeoffrey@gmail.com>"]
edition = "2021"
rust-version = "1.94.0"
resolver = "2"

[profile.release]
debug = true

[features]
default = []

[dependencies]
winit = { version = "0.28.6"}
log = "0.4"
pollster = "0.2"
scrub_log = "0.2"
bytemuck = { version = "1.4", features = ["derive"] }
async-executor = "1.0"
rand = "0.9"
cgmath = "0.18"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
instant = "0.1"
int_grid = {path = "int_grid"}
lazy_static = "1"
scarlet = "1"
image = "0.25"
fastrand = "1.7"
wgpu = { version = "0.17", features = ["webgl"]}


[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "0.1", features = [ "stdweb" ] }
console_error_panic_hook = "0.1.6"
console_log = { version = "0.2", features = ["color"] }
wasm-bindgen-futures = "0.4.20"
wasm-bindgen = "0.2.78"
web-sys = { version = "0.3.55", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
js-sys = "0.3.50"


[dev-dependencies]
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
async-executor = "1.0"
pollster = "0.2"

[build-dependencies]
tera="1"
int_grid = {path = "int_grid"}
