[package]
name = "spout"
version = "0.1.0"
authors = ["Geoffrey Lalonde <lalondegeoffrey@gmail.com>"]
edition = "2021"
rust-version = "1.94.0"
resolver = "2"

[profile.release]
debug = true

[features]
default = []

[dependencies]
winit = "0.30"
log = "0.4"
pollster = "0.3"
scrub_log = "0.2"
bytemuck = { version = "1.15", features = ["derive"] }
async-executor = "1.0"
rand = "0.9"
glam = "0.29"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
scarlet = "1"
image = "0.25"
fastrand = "1.7"
wgpu = "29"
web-time = "1"
oxdz = { git = "https://github.com/glalonde/oxdz", branch = "master" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.15"


[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1.6"
console_log = { version = "0.2", features = ["color"] }
wasm-bindgen-futures = "0.4.20"
wasm-bindgen = "0.2.78"
web-sys = { version = "0.3.55", features = [
    "Document",
    "Window",
    "Element",
    "Location",
    "AudioContext",
    "AudioContextState",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioScheduledSourceNode",
    "AudioNode",
    "AudioDestinationNode",
    # Touch input
    "Event",
    "EventTarget",
    "HtmlCanvasElement",
    "Touch",
    "TouchEvent",
    "TouchList",
]}
js-sys = "0.3.50"


[dev-dependencies]
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
async-executor = "1.0"
pollster = "0.3"

[build-dependencies]
tera="1"
