[package]
name = "spout_rust"
version = "0.1.0"
authors = ["Geoffrey Lalonde <lalondegeoffrey@gmail.com>"]
edition = "2018"

[features]
default = []
vulkan = ["gfx-backend-vulkan"]
metal = ["gfx-backend-metal"]
dx12 = ["gfx-backend-dx12"]
no_backend = ["gfx-backend-empty"]
unstable = []

[[bin]]
name = "compute"
path = "examples/compute/main.rs"

[[bin]]
name = "color-uniform"
path = "examples/color-uniform/main.rs"

[[bin]]
name = "basic"
path = "examples/basic/main.rs"

[dependencies]
gfx-hal = "0.4.1"
image = "0.21"
log = "*"
env_logger = "*"
ansi_term = "*"
floating-duration = "*"
gflags = "0.3.2"
winit = { version = "0.20.0-alpha4", features = ["web-sys"] }
glsl-to-spirv = "0.1.4"
scrub_log = "*"

[dependencies.gfx-backend-vulkan]
features = ["x11"]
optional = true

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
optional = true

[dependencies.gfx-backend-empty]
optional = true