[package]
name = "spout"
version = "0.1.0"
authors = ["Geoffrey Lalonde <lalondegeoffrey@gmail.com>"]
edition = "2018"

[features]
default = []

[dependencies]
image = "0.21"
gflags = "0.3.2"
winit = { version = "0.20.0-alpha4", features = ["web-sys"] }
glsl-to-spirv = "0.1.4"
scrub_log = "0.2"
log = "*"
wgpu = "*"
shaderc = "*"
walkdir = "2.2.9"
lazy_static = "*"
zerocopy = "0.2"
futures = "0.3"
cgmath = "0.17"
nalgebra = "0.19"
rand = "*"
png = "0.15"
scarlet = "*"
wgpu_glyph = {git = "https://github.com/hecrj/wgpu_glyph" }
sdl2 = { version = "0.33.0", features = ["mixer"]}

[build-dependencies]
log = "*"
shaderc = "*"
walkdir = "2.2.9"
phf = {version = "0.8.0", features = ["macros"]}
scrub_log = "0.2"
